FileResponse updated to make api return ids of file which were not fetched